[gd_scene load_steps=3 format=3 uid="uid://bndf1e4sgdjr6"]

[ext_resource type="Script" uid="uid://65e0rl31fx0i" path="res://Script/BigPanel/LuckyDrawPanel.gd" id="1_dcmen"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ynokl"]
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
corner_detail = 20

[node name="LuckyDrawPanel" type="Panel"]
offset_left = 373.0
offset_top = 1.0
offset_right = 1045.0
offset_bottom = 721.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ynokl")
script = ExtResource("1_dcmen")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_top = 19.0
offset_right = 669.0
offset_bottom = 78.0
theme_override_colors/font_color = Color(0.624759, 0.8051, 0.828302, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 35
text = "å¹¸è¿æŠ½å¥–"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
modulate = Color(0.642982, 0.510828, 1, 1)
layout_mode = 0
offset_top = 419.0
offset_right = 671.0
offset_bottom = 468.0
theme_override_font_sizes/font_size = 30
text = "ğŸ‰è·å¾—å¥–åŠ±ğŸ‰"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="Button" parent="."]
custom_minimum_size = Vector2(57, 57)
layout_mode = 0
offset_left = 595.0
offset_top = 21.0
offset_right = 652.0
offset_bottom = 78.0
theme_override_font_sizes/font_size = 35
text = "X"

[node name="LuckyDrawReward" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 481.0
offset_right = 671.0
offset_bottom = 633.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "+500 ç»éªŒï¼Œ+400 é’±å¸ï¼Œ+5 æ™®é€š-ç•ªèŒ„ç§å­ï¼Œ+1 ä¼ å¥‡-ç«é¾™æœç§å­ "
horizontal_alignment = 1

[node name="Grid" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 85.0
offset_right = 657.0
offset_bottom = 419.0
columns = 5

[node name="RewardItem" type="RichTextLabel" parent="Grid"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_font_sizes/normal_font_size = 17
bbcode_enabled = true
text = "+50é’±å¸
+100ç»éªŒ
+4ç•ªèŒ„ç§å­
+3ç«é¾™æœç§å­"
horizontal_alignment = 1
vertical_alignment = 1
threaded = true

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = 633.0
offset_right = 671.0
offset_bottom = 703.0
alignment = 1

[node name="FiveLuckyDrawButton" type="Button" parent="HBox"]
modulate = Color(0.623529, 1, 0.996078, 1)
custom_minimum_size = Vector2(150, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "äº”è¿æŠ½"

[node name="TenLuckyDrawButton" type="Button" parent="HBox"]
modulate = Color(0.690196, 1, 0.52549, 1)
custom_minimum_size = Vector2(150, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "åè¿æŠ½"

[node name="LuckyDrawButton" type="Button" parent="HBox"]
modulate = Color(1, 1, 0.52549, 1)
custom_minimum_size = Vector2(150, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "æŠ½å¥–"

[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="HBox/FiveLuckyDrawButton" to="." method="_on_five_lucky_draw_button_pressed"]
[connection signal="pressed" from="HBox/TenLuckyDrawButton" to="." method="_on_ten_lucky_draw_button_pressed"]
[connection signal="pressed" from="HBox/LuckyDrawButton" to="." method="_on_lucky_draw_button_pressed"]
